--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: 'MapoFlowerIsland';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'MapoFlowerIsland';
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: top;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+    padding-left: 0 !important;
 }
 
-.App-link {
-  color: #61dafb;
+li {
+    list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* App */
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+/* NavBar */
+.header {
+    position: relative;
+}
+
+.login_btn {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+.logo figure {
+    width: 100px;
+    cursor: pointer;
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+}
+
+.menu ul {
+    display: flex;
+}
+
+.menu li {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.search {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.search input {
+    border: none;
+    border-bottom: 2px solid #333;
+    outline: none;
+}
+
+/* Card */
+.card_wrap li:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.card_wrap li figure {
+    width: 100%;
+    max-width: 300px;
+}
+
+.card_wrap li span {
+    display: block;
+    font-size: 1.1em;
+    color: #333;
+}
+
+.card_wrap li p {
+    font-size: 1.1em;
+    font-weight: 500;
+}
+
+.card_wrap li em {
+    font-size: .85em;
+    color: #333;
+    display: block;
+    font-style: normal;
+}
+
+/* detail */
+
+.product_img {
+    display: flex;
+    justify-content: flex-end;
 }
