--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 img {
     max-width: 100%;
     height: auto;
-    vertical-align: top;
+    vertical-align: bottom;
 }
 
 ul {
@@ -82,12 +82,24 @@ li {
     border: none;
     border-bottom: 2px solid #333;
     outline: none;
+    padding-left: 20px;
+    font-size: 1.15em;
+}
+
+.search .searchIcon {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /* Card */
-.card_wrap li:hover {
-    transform: scale(1.1);
+.card_wrap li {
     cursor: pointer;
+}
+
+.card_wrap li:hover figure {
+    transform: scale(1.1);
 }
 
 .card_wrap li figure {
